Rich makes a pass

--- a/Seneca.tex
+++ b/Seneca.tex
@@ -161,9 +161,10 @@ amortize the time/cost of Seneca.
 
 We assume that the dataset supplied to Seneca by the user is representative of 
 datasets on which the 
-resulting model will be used.  In addition, we use prediction error as the 
-score (i.e., mean squared error for regression and accuracy percentage for classification) 
-instead of $R^2$, which describes explanatory power, to avoid overfitting.
+resulting model will be used.  
+%In addition, we use prediction error as the 
+%score (i.e., mean squared error for regression and accuracy percentage for classification) 
+%instead of $R^2$, which describes explanatory power, to avoid overfitting.
 As part of future work, we are considering using multiple datasets and a ranges
 of hyperparameter values to preclude the need for users to specify
 them and to consider a wider range of values.
