--- a/tables/yield-tab-corrected.tex
+++ b/tables/yield-tab-corrected.tex
@@ -12,7 +12,7 @@
 EC2 exec time (mins)                        & 73.79 & 21.99 & 359.87& 7.74 & 15.92\\
 %Seneca, for reference: Exec time opt (mins)& 12.60 & 4.09 & 29.07 & 2.08 & 3.06 \\
 \hline
-EC2 total cost (cents)                    & 8.30 & 4.20 & 25.00 & 4.20 & 4.20\\
+EC2 total cost (\$)                    & 0.083 & 0.042 & 0.25 & 0.042 & 0.042\\
 %Seneca, for reference: Total Cost (cents) &19.83 & 5.74 & 39.81 & 1.43 & 4.44 \\
 \hline
 \hline
