mz - update title

--- a/paper.tex
+++ b/paper.tex
@@ -251,7 +251,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Seneca: Fast, Low Cost Hyperparameter Search for Machine Learning Models}
+\title{Seneca: Fast and Low Cost Hyperparameter Search for Machine Learning Models}
 
 
 % author names and affiliations
